--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Document</title>
+  <title>TinyOne</title>
 </head>
 
 <body>
@@ -35,15 +35,75 @@
       </nav>
     </div>
 
-    <div class="header-slider container"></div>
+    <div class="header-slider container">
+      <div class="slides">
+
+        <div class="slide active">
+          <h2 class="slide__title">Inspire your inspiration</h2>
+          <p class="slide__subtitle">Simple to use for your app, products showcase and your inspiration</p>
+          <p class="slide__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget
+            tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor.
+            In quis arcu et eros porta lobortis sit.</p>
+          <div class="slide__img">
+            <img src="assets/img/slide-image-1.png" alt="">
+          </div>
+          <ul class="slide__links">
+            <li><a href=""><i class="fa fa-apple"></i></a></li>
+            <li><a href=""><i class="fa fa-android"></i></a></li>
+            <li><a href=""><i class="fa fa-windows"></i></a></li>
+          </ul>
+        </div>
+
+        <div class="slide">
+          <h2 class="slide__title">Lorem ipsum dolor amet</h2>
+          <p class="slide__subtitle">Saepe aliquid obcaecati distinctio ad inventore voluptate porro</p>
+          <p class="slide__text">Non voluptas eos amet doloribus cupiditate sapiente quod officia fugit natus delectus
+            voluptatum ratione, repudiandae quos alias perspiciatis minima, illo magni necessitatibus quo exercitationem
+            eius id.</p>
+          <div class="slide__img">
+            <img src="assets/img/slide-image-2.png" alt="">
+          </div>
+          <ul class="slide__links">
+            <li><a href=""><i class="fa fa-apple"></i></a></li>
+            <li><a href=""><i class="fa fa-android"></i></a></li>
+            <li><a href=""><i class="fa fa-windows"></i></a></li>
+          </ul>
+        </div>
+
+        <div class="slide">
+          <h2 class="slide__title">Eaque, consequatur dicta</h2>
+          <p class="slide__subtitle">Iure ipsum delectus ducimus aliquam voluptatibus doloribus ex unde</p>
+          <p class="slide__text">Officia tempora impedit veniam libero dolorum voluptatum? Impedit inventore, eum vero
+            quibusdam, suscipit laborum incidunt nihil ad, ratione vel quasi minus! Fugiat. In quis arcu et eros porta
+            lobortis sit</p>
+          <div class="slide__img">
+            <img src="assets/img/slide-image-3.png" alt="">
+          </div>
+          <ul class="slide__links">
+            <li><a href=""><i class="fa fa-apple"></i></a></li>
+            <li><a href=""><i class="fa fa-android"></i></a></li>
+            <li><a href=""><i class="fa fa-windows"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <ul class="indicators">
+        <li class="indicator active" data-slide-to="0"></li>
+        <li class="indicator" data-slide-to="1"></li>
+        <li class="indicator" data-slide-to="2"></li>
+      </ul>
+    </div>
   </header>
 
-  <section></section>
+  <section class="section container">
+    <h2>Tinyone features</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.
+      Donec rutrum sed sem quis venenatis.</p>
+  </section>
 
   <footer></footer>
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
-  <!--<script src="assets/js/main.js"></script>-->
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
