--- a/index.html
+++ b/index.html
@@ -20,16 +20,20 @@
         <strong class="header-logo_title">tinyone</strong>
       </div>
       <nav class="header-navbar">
-        <div class="header-navbar_burger"></div>
-        <ul class="header-navbar_list">
-          <li class="header-navbar_item">
-            <a class="header-navbar_link" href="">Features</a>
+        <div class="header-navbar__hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <ul class="header-navbar__list">
+          <li class="header-navbar__item">
+            <a class="header-navbar__link" href="">Features</a>
           </li>
-          <li class="header-navbar_item">
-            <a class="header-navbar_link" href="">Support</a>
+          <li class="header-navbar__item">
+            <a class="header-navbar__link" href="">Support</a>
           </li>
-          <li class="header-navbar_item">
-            <a class="header-navbar_link" href="">Blog</a>
+          <li class="header-navbar__item">
+            <a class="header-navbar__link" href="">Blog</a>
           </li>
         </ul>
       </nav>
@@ -96,11 +100,122 @@
 
   <section class="section container">
     <h2>Tinyone features</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.
+    <p class="section-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus
+      tristique bibendum.
       Donec rutrum sed sem quis venenatis.</p>
+    <div class="section-content">
+
+      <div class="section-content__item">
+        <h3 class="section-content__title">Fully Responsive</h3>
+        <p class="section-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis
+          consequatur dicta itaque obcaecati quasi temporibus!</p>
+        <div class="section-content__img">
+          <i class="fa fa-tablet"></i>
+        </div>
+      </div>
+      <div class="section-content__item">
+        <h3 class="section-content__title">Fully Layered PSD</h3>
+        <p class="section-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis
+          consequatur dicta itaque obcaecati quasi temporibus!</p>
+        <div class="section-content__img">
+          <i class="fa fa-lemon-o"></i>
+        </div>
+      </div>
+      <div class="section-content__item">
+        <h3 class="section-content__title">Font Awesome Icons</h3>
+        <p class="section-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis
+          consequatur dicta itaque obcaecati quasi temporibus!</p>
+        <div class="section-content__img">
+          <i class="fa fa-folder-o"></i>
+        </div>
+      </div>
+      <div class="section-content__item">
+        <h3 class="section-content__title">HTML5 & CSS3</h3>
+        <p class="section-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis
+          consequatur dicta itaque obcaecati quasi temporibus!</p>
+        <div class="section-content__img">
+          <i class="fa fa-code"></i>
+        </div>
+      </div>
+      <div class="section-content__item">
+        <h3 class="section-content__title">Email Template</h3>
+        <p class="section-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis
+          consequatur dicta itaque obcaecati quasi temporibus!</p>
+        <div class="section-content__img">
+          <i class="fa fa-envelope-o"></i>
+        </div>
+      </div>
+      <div class="section-content__item">
+        <h3 class="section-content__title">Free to Download</h3>
+        <p class="section-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis
+          consequatur dicta itaque obcaecati quasi temporibus!</p>
+        <div class="section-content__img">
+          <i class="fa fa-bookmark-o"></i>
+        </div>
+      </div>
+
+    </div>
+
   </section>
 
-  <footer></footer>
+  <footer>
+    <div class="footer container">
+      <h2 class="footer-title">Keep in touch with us</h2>
+      <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus
+        tristique bibendum. Donec rutrum sed sem quis venenatis.</p>
+      <form class="footer-form" method="get">
+        <input class="footer-form__input" type="email" name="email" placeholder="Enter your email to update">
+        <button class="footer-form__btn" type="submit">SUBMIT</button>
+      </form>
+      <div class="footer-socials">
+        <a href=""><i class="fa fa-facebook-square"></i></a>
+        <a href=""><i class="fa fa-twitter-square"></i></a>
+        <a href=""><i class="fa fa-flickr"></i></a>
+        <a href=""><i class="fa fa-pinterest-square"></i></a>
+      </div>
+      <div class="footer-info">
+        <div class="footer-info__first">
+          UKRAINE <br>
+          Lorem ipsum dolor sit amet<br>
+          Praesent vitae eros eget tellus<br>
+          Blanditiis consequatur<br>
+          Donec rutrum sed sem<br>
+          <a href="marckina.vika99@gmail.com">marckina.vika99@gmail.com</a> <br>
+          <a href="https://www.instagram.com/vicka_markina/?hl=ru">@vicka_markina</a>
+
+        </div>
+        <div class="footer-info__second">
+          <ul>
+            <li><a href="">Examples</a></li>
+            <li><a href="">Shop</a></li>
+            <li><a href="">License</a></li>
+          </ul>
+        </div>
+        <div class="footer-info__third">
+          <ul>
+            <li><a href="">Contact</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Terms</a></li>
+          </ul>
+        </div>
+        <div class="footer-info__fourth">
+          <ul>
+            <li><a href="">Download</a></li>
+            <li><a href="">Support</a></li>
+            <li><a href="">Documents</a></li>
+          </ul>
+        </div>
+        <div class="footer-info__fifth">
+          <ul>
+            <li><a href="">Media</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Forums</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/js/main.js"></script>
