--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <header>
     <div class="header-menu container">
       <div class="header-logo">
-        <img class="header-logo_img" src="./assets/img/logo.png" alt="logo">
-        <strong class="header-logo_title">tinyone</strong>
+        <img class="header-logo__img" src="./assets/img/logo.png" alt="logo">
+        <strong class="header-logo__title">tinyone</strong>
       </div>
       <nav class="header-navbar">
         <div class="header-navbar__hamburger">
